# VRP_Project

./: .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  FIXES_APPLIED.md  IMPLEMENTATION_STATUS.md  Makefile  PHASE_2_STATUS.md  PHASE_3_FINAL_STATUS.md  ProyectoConcierto.code-workspace  README.md  demo.py  demo_phase3_e2e.py  docker-compose.yml  requirements.txt
backend_python/: __init__.py  config.py
backend_python/api/: __init__.py  main.py
backend_python/models/: __init__.py
backend_python/persistence/: __init__.py  mongodb_adapter.py  postgres_adapter.py
backend_python/service/: __init__.py  osrm_client.py  solver_orchestrator.py
backend_python/tests/: __init__.py
core_cpp/: CMakeLists.txt
core_cpp/include/: cost_matrix.hpp  graph.hpp  solution.hpp
core_cpp/include/builders/: nearest_neighbor.hpp
core_cpp/include/operators/: local_search.hpp
core_cpp/include/optimizers/: simulated_annealing.hpp
core_cpp/src/: bindings.cpp  cost_matrix.cpp  graph.cpp  solution.cpp
core_cpp/tests/: CMakeLists.txt  test_cost_matrix.cpp  test_graph.cpp  test_solution.cpp
data/: ejemplo_10.vrp  ejemplo_100.vrp  ejemplo_10000.vrp  ejemplo_100000.vrp  ejemplo_20.vrp  ejemplo_200.vrp  ejemplo_20000.vrp  ejemplo_300.vrp  ejemplo_500.vrp  ejemplo_50000.vrp
docs/: CREDITS.md  Resumen_Exposicion.doc  TESTING_STRATEGY.md
docs/adr/: 0001-hybrid-python-cpp.md  0002-asymmetric-cost-matrices.md  0002-simulated-annealing-drl.md  0003-drl-parameter-calibration.md  0004-ruin-recreate-operators.md
resources/: resources.qrc  style.qss
src/: main.cpp
src/algorithms/: GreedyNN.cpp  GreedyNN.h  IVRPSolver.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h
src/core/: Cliente.h  Instancia.cpp  Instancia.h  Solucion.cpp  Solucion.h
src/gui/: MainWindow.cpp  MainWindow.h  RouteView.cpp  RouteView.h
src/io/: LectorInstancia.cpp  LectorInstancia.h
tests/: conftest.py  test_core.cpp
tests/integration/: test_solver_end_to_end.py
tests/unit/: test_api_integration.py  test_models.py  test_optimizers.py  test_osrm_client.py  test_persistence.py
